<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:background="#2DFCFCFD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_banner"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <info.hoang8f.widget.FButton
        android:id="@+id/btnProfile"
        android:layout_width="209dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:padding="10dp"
        android:text="@string/My_Profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:fButtonColor="@color/fbutton_color_sun_flower"
        app:layout_constraintEnd_toEndOf="@+id/btnAndela"
        app:layout_constraintStart_toStartOf="@+id/btnAndela"
        app:layout_constraintTop_toBottomOf="@+id/btnAndela"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/fbutton_color_asbestos"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp" />


    <info.hoang8f.widget.FButton
        android:id="@+id/btnAndela"
        android:layout_width="195dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/aclonica"
        android:padding="10dp"
        android:text="@string/About_ALC"
        android:textSize="24sp"
        app:fButtonColor="@color/fbutton_color_sun_flower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="@color/fbutton_color_asbestos"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp" />


</android.support.constraint.ConstraintLayout>